--- a/src/03-feedback.html
+++ b/src/03-feedback.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <p><a href="index.html">Go back</a></p>
-
+    <div class="warning" style="display: none; color: red;"></div>
     <form class="feedback-form" autocomplete="off">
       <label>
         Email
